recursion.lessons.recursion.koch.Koch.scala.error
Koch:22: error: ';' expected but ')' found.
		avance(length/(3*levels)));
                                         ^